<resources>
    <string name="app_name">DeMessenger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Password</string>
    <string name="text_login">SIGN IN</string>
    <string name="text_register">REGISTER</string>
    <string name="text_welcome_login">Welcome =)</string>
    <string name="forgot_your_password_text">Forgot your password?</string>
    <string name="registration_text">Registration</string>
    <string name="nickname_text">Nickname</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="reset_password_text">Reset password</string>
    <string name="reset_text">RESET</string>
    <string name="logout_text">Logout</string>
    <string name="message_hint">Message..</string>
</resources>